tests/snapshots/parity_init__init_empty_tree@bash.snap
---
source: tests/parity_init.rs
expression: manifest
---
entries:
  ".agent-workspace":
    kind: dir
