tests/snapshots/parity_init__init_named_base_tree@bash.snap
---
source: tests/parity_init.rs
expression: manifest
---
entries:
  ".agent-workspace":
    kind: dir
  ".agent-workspace/repo-cache":
    kind: dir
  ".agent-workspace/repo-cache/dev-repo.git":
    kind: dir
