tests/snapshots/parity_init__init_one_remote_tree@rust.snap
---
source: tests/parity_init.rs
expression: manifest
---
entries:
  ".agent-workspace":
    kind: dir
  ".agent-workspace/repo-cache":
    kind: dir
  ".agent-workspace/repo-cache/repo1.git":
    kind: dir
